Player movement and Platforms
Added jump, left and right movement, jump sound and platforms.

--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
 }
 
 canvas {
-    background-color: green;
+    background-color: black;
     display: block;
     margin: auto;
-    border: 2px solid black;
+    border: 2px solid grey;
 }
